ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
    name: test-namespace
