ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-deployment
  namespace: test-ns
spec:
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: fast-api-container
          image: tiangolo/uvicorn-gunicorn:python3.11
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports:
            - containerPort: 80
