ingress/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test-ns
  name: fast-api-service
spec:
  type: NodePort
  selector:
    app: python-app # selector for deployment
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
