ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api-ingress
  namespace: test-ns
spec:
  rules:
    - host: philip-test.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fast-api-service
                port:
                  number: 80
